# amesh

./: .gitignore  MANIFEST.in  README.md  amesh.conf  amesh.py  setup.cfg  setup.py
amesh/: __init__.py  amesh.py  amesh_node.py  control.py  devtracker.py  fib.py  main.py  node.py  static.py
debian/: amesh.service
etc/amesh/: amesh-control.conf.sample  amesh.conf  amesh.conf.sample
systemd/: amesh.service
test/: README.md  amesh-test1.conf  amesh-test2.conf  amesh-test3.conf  amesh-test4.conf  private1.key  private2.key  private3.key  private4.key  public1.key  public2.key  public3.key  public4.key  setup-netns.sh  setup-vrf-netns3.sh  start-ameshes-tmux  start-ping-check.sh
