
[metadata]
name = amesh
summary = A wireguard Mesh control plane
version = 0.0.2
author = Ryo Nakamura
author-email = upa@haeena.net
url = https://github.com/upa/amesh
license = MIT
description = amesh: A wireguard mesh control plane


[options]
packages = amesh

install_requires =
    etcd3
    pyroute2

[files]
data_files =
    etc/amesh = etc/amesh/amesh.conf.sample
    /lib/systemd/system = systemd/amesh.service


[options.entry_points]
console_scripts =
    amesh = amesh.main:main
